# Orn

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE.md  README.md  benchmark.sh  prueba  prueba.s  scalingBenchMark.sh
.github/workflows/: ci.yml  doxygen.yml
_codeql_build_dir/: Makefile  orn
benchmarks/: benchmark.md  benchmark.sh  scalingBenchMark.sh
examples/: AddFn.orn  CountToTen.orn  Person.orn  Rectangle.orn  countToTen.orn  fibonacci.orn
runtime/: runtime.s
src/: main.c
src/IR/: ir.c  ir.h  irHelpers.c  irHelpers.h  optimization.c  optimization.h
src/codeGeneration/: asmEmitter.c  asmTemplate.h  codeGenExpressions.c  codeGenExpressions.h  codeGenOperations.c  codeGenOperations.h  codeGeneration.c  codeGeneration.h  codegen.c  codegen.h  constants.h  dataPool.c  emiter.c  helpers.c  registerHandling.c  registerHandling.h  stringBuffer.c  stringHandling.c  variableHandling.c  variableHandling.h
src/errorHandling/: errorHandling.c  errorHandling.h  errors.c
src/lexer/: lexer.c  lexer.h
src/modules/: build.c  interface.c  interface.h
src/parser/: parser.c  parser.h  parserHelpers.c
src/runtime/: runtime.s
src/semantic/: builtIns.c  builtIns.h  semanticHelpers.c  semanticHelpers.h  symbolTable.c  symbolTable.h  typeChecker.c  typeChecker.h
src/testing/: testing.c  testing.h
test/: test_main.c
